# pyfair-cam

./: .gitignore  .gitmodules  README.md  ROADMAP.md  pyfair_cam_mc_notiz.md  requirements.txt  setup.cfg
examples/: basic_simulation.py
pyfair_cam/: __init__.py  core.py
pyfair_cam/factors/: __init__.py  detection_response.py  resistance.py  susceptibility.py
pyfair_cam/model/: __init__.py  cam_model.py
pyfair_cam/report/: __init__.py  simple_report.py
pyfair_cam/simulator/: __init__.py  distributions.py  monte_carlo.py
pyfair_cam/utility/: __init__.py
tests/: test_core.py  test_model.py
