[metadata]
name = pyfair-cam
version = 0.1-alpha.1
description = Monte Carlo Simulator for FAIR-CAM (Controls Analytics Model)
long_description = file: README.md
author = Mirko Prehn
author_email = mirko.prehn@web.de
license = MIT
url = https://github.com/neoprehn/pyfair-cam

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy>=1.26.0
    scipy>=1.11.0
    pandas>=2.0.0
    matplotlib>=3.7.0
    plotly>=5.18.0
